product page design fixes on mobile

--- a/assets/hebrew.css
+++ b/assets/hebrew.css
@@ -12,6 +12,11 @@
   text-align: right;
 }
 
+.price span.price-item,
+.price s.price-item {
+  margin: 0 0 0 1rem;
+}
+
 @media only screen and (min-width: 750px) {
   .image-with-text__content--desktop-right>* {
     align-self: flex-start;
