--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1480,3 +1480,8 @@ a.product__text {
 .product-form__buttons button {
   font-weight: var(--font-body-weight-bold);
 }
+
+.badge-discount {
+  color: firebrick;
+  border: 1px solid firebrick;
+}
